--- a/OpenStreetMap_Final.ipynb
+++ b/OpenStreetMap_Final.ipynb
@@ -782,6 +782,8 @@
    ],
    "source": [
     "# Create Database called 'inglewood.db'\n",
+    "# File = create_db.py\n",
+    "\n",
     "engine = create_engine('sqlite:///inglewood.db') \n",
     "\n",
     "# Create tables within the Database\n",
